<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/border"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_file_name"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_key"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:background="@drawable/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="50dp"
        android:textColor="#ffffff"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/submit"
        />



</LinearLayout>