<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/desc"
    android:background="@drawable/border">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/wrote"
        android:text="@string/encoded_wrote"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/time"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
         />

    <Button
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:text="@string/view_file"
        android:id="@+id/view_file"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:id="@+id/send_on_WA"
        android:text="@string/send_on_whatsapp"
        android:layout_gravity="center_horizontal"


        />

    <Button
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:text="@string/close"
        android:id="@+id/close"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"/>



</LinearLayout>

